Fixed footer logo align

--- a/.metalsmith/sass/style.scss
+++ b/.metalsmith/sass/style.scss
@@ -252,7 +252,7 @@ footer.main-footer {
             span.img {
                 background-image: url(../img/logo.footer.png);
                 background-repeat: no-repeat;
-                background-position: center;
+                background-position: left center;
                 background-size: 90%;
                 width: 100px;
                 margin-bottom: 0;
